added booking service

--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.flight</groupId>
+			<artifactId>flight-webflux-mongodb</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
