--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=booking-service
+server.port=8081
+
+spring.mongodb.uri=mongodb://localhost:27017/bookingdb
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
