added flight repository

--- a/flight-service/pom.xml
+++ b/flight-service/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>spring-boot-starter-webflux-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.flight</groupId>
+			<artifactId>flight-webflux-mongodb</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
