--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -82,9 +82,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.flight</groupId>
-			<artifactId>flight-webflux-mongodb</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+    	<groupId>org.springframework.cloud</groupId>
+    	<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
