--- a/flight-api-gateway/src/main/resources/application.properties
+++ b/flight-api-gateway/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=flight-api-gateway
-server.port=8080
+server.port=8070
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.config.import=optional:configserver:
+spring.cloud.config.enabled=false
