--- a/flight-service/pom.xml
+++ b/flight-service/pom.xml
@@ -69,9 +69,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.flight</groupId>
-			<artifactId>flight-webflux-mongodb</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-openfeign</artifactId>
+</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -83,6 +86,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
