--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -117,6 +117,10 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+    			<groupId>org.springframework.cloud</groupId>
+    			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
