--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.mongodb.uri=mongodb://localhost:27017/bookingdb
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+
+resilience4j.circuitbreaker.instances.flightServiceBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.flightServiceBreaker.sliding-window-size=10
+resilience4j.circuitbreaker.instances.flightServiceBreaker.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.flightServiceBreaker.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.flightServiceBreaker.wait-duration-in-open-state=10s
