--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -12,3 +12,5 @@ resilience4j.circuitbreaker.instances.flightServiceBreaker.sliding-window-size=1
 resilience4j.circuitbreaker.instances.flightServiceBreaker.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.flightServiceBreaker.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.flightServiceBreaker.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.flightServiceBreaker.failure-rate-threshold=50
+resilience4j.timelimiter.instances.flightServiceBreaker.timeout-duration=2s
