--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -1,7 +1,3 @@
 spring.application.name=flight-service
-server.port = 8082
-spring.mongodb.uri=mongodb://localhost:27017/flightdb
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+spring.config.import=optional:configserver:http://localhost:8888/
+server.port=8082
