--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=booking-service
 spring.config.import=optional:configserver:http://localhost:8888/
 server.port=8083
+spring.mongodb.uri=mongodb://127.0.0.1:27017/bookingdb
