--- a/flight-email-service/src/main/resources/application.properties
+++ b/flight-email-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.kafka.consumer.properties.spring.json.value.default.type=com.flightapp.ev
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=yaswithasakhamuri05@gmail.com
-spring.mail.password=uaau rvsg ftgr zbrb
+spring.mail.username=abc@gmail.com
+spring.mail.password=uuuu uuuu uuuu uuuu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
