updated code with booked event

--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -98,10 +98,16 @@
     <artifactId>mockito-junit-jupiter</artifactId>
     <scope>test</scope>
 </dependency>
-
-		<dependency>
+<!-- Spring Kafka -->
+<dependency>
     <groupId>org.springframework.kafka</groupId>
     <artifactId>spring-kafka</artifactId>
+</dependency>
+
+<!-- Jackson Databind (for JSON serialization) -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
 </dependency>
 
 		<dependency>
