--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=booking-service
 spring.config.import=optional:configserver:http://localhost:8888/
 server.port=8083
 spring.mongodb.uri=mongodb://127.0.0.1:27017/bookingdb
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.producer.properties.spring.json.add.type.headers=false
