--- a/flight-email-service/src/main/resources/application.properties
+++ b/flight-email-service/src/main/resources/application.properties
@@ -4,15 +4,15 @@ server.port=8090
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=emailGroup
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.flightapp.events
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.flightapp.events
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
-spring.kafka.consumer.properties.spring.json.value.default.type=com.flightapp.events.BookingCreatedEvent
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=abc@gmail.com
-spring.mail.password=uuuu uuuu uuuu uuuu
+spring.mail.username=yaswithasakhamuri05@gmail.com
+spring.mail.password=uaau rvsg ftgr zbrb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
