--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=flight-service
 spring.config.import=optional:configserver:http://localhost:8888/
 server.port=8082
+spring.mongodb.uri=mongodb://localhost:27017/flightdb
